# govbr-data

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
govbr_data/: .user.yml  dbt_project.yml  dev.duckdb  profiles.yml
govbr_data/models/: sources.yml
govbr_data/models/raw/: src_candidatos.sql
scrapy_govbr_data/: pyproject.toml  setup.py
scrapy_govbr_data/scrapy_govbr_data/: dag.py
scrapy_govbr_data/scrapy_govbr_data/assets/: dbt_assets.py  extract_asset.py
scrapy_govbr_data/scrapy_govbr_data/utils/: extract_tse.py  s3.py
