[tool.poetry]
name = "govbr-data"
version = "0.1.0"
description = ""
authors = ["lucasmullers <lucas.mullers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dbt-duckdb = "1.7.3"
dagster-dbt = "0.22.14"
dagster-webserver = "1.6.14"
deltalake = "0.16.3"
boto3 = "^1.34.74"
loguru = "^0.7.2"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
